# codebaseassistant

./: .gitignore  main.py  pyproject.toml
app/: main.py
app/rag/code/: chunker.py  clone.py  ingest.py
app/rag/core/: llm.py  vectorstore.py
app/rag/pdf/: chunker_pdf.py  ingest_pdf.py  loader_pdf.py
